--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html ng-app="alfTableApp">
+<html ng-app="AflTableApp">
   <head>
     <meta charset="utf-8">
-    <title>alfTableApp</title>
+    <title>aflTableApp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
