--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="AflTableApp">
+<html ng-app="aflTableApp">
   <head>
     <meta charset="utf-8">
     <title>aflTableApp</title>
